# wormhole-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.bak  Dockerfile.build  README.md  build-linux.sh  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: build.yml  pages.yml  release.yml
crates/wormhole-common/: Cargo.toml
crates/wormhole-common/src/: lib.rs
crates/wormhole-common/src/auth/: mod.rs  nostr_pin.rs  pin.rs  spake2.rs
crates/wormhole-common/src/core/: crypto.rs  crypto_test.rs  folder.rs  mod.rs  resume.rs  transfer.rs  wormhole.rs
crates/wormhole-common/src/signaling/: mod.rs  nostr_protocol.rs
crates/wormhole-rs/: Cargo.toml
crates/wormhole-rs-local/: Cargo.toml
crates/wormhole-rs-local/src/: main.rs
crates/wormhole-rs-local/src/mdns/: receiver.rs  sender.rs
crates/wormhole-rs-tor/: Cargo.toml
crates/wormhole-rs-tor/src/: main.rs
crates/wormhole-rs-tor/src/onion/: receiver.rs  sender.rs
crates/wormhole-rs-webrtc/: .gitignore  Cargo.toml  README.md
crates/wormhole-rs-webrtc/docs/: ARCHITECTURE.md
crates/wormhole-rs-webrtc/src/: main.rs
crates/wormhole-rs-webrtc/src/ice/: agent.rs  conn.rs  mod.rs  receiver.rs  sender.rs  signaling.rs
crates/wormhole-rs-webrtc/src/signaling/: mod.rs  nostr.rs  offline.rs
crates/wormhole-rs-webrtc/src/webrtc/: common.rs  mod.rs  offline_receiver.rs  offline_sender.rs  receiver.rs  sender.rs
crates/wormhole-rs/src/: main.rs
crates/wormhole-rs/src/cli/: instructions.rs
crates/wormhole-rs/src/iroh/: common.rs  receiver.rs  sender.rs
crates/wormhole-rs/src/mdns/: common.rs  receiver.rs  sender.rs
crates/wormhole-rs/src/onion/: receiver.rs  sender.rs
docs/: ARCHITECTURE.md  ROADMAP.md  SECURITY_AUDIT.md  USE_CASES.md
examples/: onion_receiver.rs  onion_receiver_test.rs  onion_sender_test.rs
src/: crypto.rs  crypto_tests.rs  folder.rs  folder_receiver.rs  folder_sender.rs  hybrid_receiver.rs  hybrid_receiver_tests.rs  hybrid_sender.rs  iroh_common.rs  iroh_receiver.rs  iroh_sender.rs  lib.rs  main.rs  mdns_common.rs  mdns_receiver.rs  mdns_sender.rs  nostr_pin.rs  nostr_protocol.rs  nostr_protocol_tests.rs  nostr_receiver.rs  nostr_relay.rs  nostr_sender.rs  nostr_signaling.rs  onion_receiver.rs  onion_sender.rs  pin.rs  receiver.rs  receiver_iroh.rs  sender.rs  sender_iroh.rs  spake2_handshake.rs  tmpfiles.rs  tmpfiles_fallback.rs  transfer.rs  webrtc_common.rs  webrtc_offline_receiver.rs  webrtc_offline_sender.rs  webrtc_offline_signaling.rs  webrtc_receiver.rs  webrtc_receiver_tests.rs  (+2 more)
src/auth/: nostr_pin.rs  pin.rs  spake2.rs
src/core/: crypto.rs  crypto_test.rs  folder.rs  mod.rs  resume.rs  transfer.rs  wormhole.rs
src/iroh/: common.rs  receiver.rs  sender.rs
src/mdns/: common.rs  mod.rs  receiver.rs  sender.rs
src/onion/: receiver.rs  sender.rs
src/signaling/: mod.rs  nostr.rs  nostr_protocol.rs  nostr_protocol_test.rs  offline.rs
src/webrtc/: common.rs  mod.rs  offline_receiver.rs  offline_sender.rs  receiver.rs  receiver_test.rs  sender.rs
tests/: transfer_test.rs
