[package]
name = "wormhole-rs"
version = "0.1.5"
edition = "2021"

[lib]
name = "wormhole_rs"
path = "src/lib.rs"

[[bin]]
name = "wormhole-rs"
path = "src/main.rs"

[[example]]
name = "onion_sender_test"
path = "examples/onion_sender_test.rs"
required-features = ["onion"]

[[example]]
name = "onion_receiver_test"
path = "examples/onion_receiver_test.rs"
required-features = ["onion"]

[features]
default = []
onion = ["dep:arti-client", "dep:tor-hsservice", "dep:tor-cell", "dep:safelog", "dep:rusqlite"]
webrtc = ["dep:webrtc", "dep:tokio-tungstenite", "dep:uuid", "dep:bytes"]
iroh = ["dep:iroh"]

[dependencies]
iroh = { version = "0.95.1", features = ["discovery-local-network"], optional = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tar = "0.4"
walkdir = "2"
nostr-sdk = "0.44.1"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
argon2 = "0.5"
sha2 = "0.10"

# mDNS - enabled by default for local network transfers
mdns-sd = "0.15"
tokio-util = "0.7"

# Arti (Tor) - optional, behind feature gate
arti-client = { version = "0.37", features = ["onion-service-service", "onion-service-client", "tokio"], optional = true }
tor-hsservice = { version = "0.37", optional = true }
tor-cell = { version = "0.37", optional = true }
safelog = { version = "0.7.1", optional = true }
# SQLite bundled for Windows builds (arti depends on rusqlite)
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

# WebRTC - optional, behind feature gate
webrtc = { version = "0.11", optional = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
bytes = { version = "1", optional = true }

