[workspace]
resolver = "2"
members = [
    "crates/wormhole-common",
    "crates/wormhole-rs",
]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
# Core dependencies shared across crates
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
futures = "0.3"
log = "0.4"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
spake2 = "0.4"

# File handling
tempfile = "3"
tar = "0.4"
walkdir = "2"
fs4 = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Nostr signaling
nostr-sdk = "0.44.1"

# CLI
clap = { version = "4", features = ["derive"] }
rustyline = "15"
crc32fast = "1.4"

# Networking
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio-util = "0.7"

# Logging
env_logger = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# iroh transport
iroh = { version = "0.95.1", features = ["discovery-local-network"] }

# mDNS discovery
mdns-sd = "0.15"

# Tor/Onion transport
arti-client = { version = "0.37", features = ["onion-service-service", "onion-service-client", "tokio"] }
tor-hsservice = { version = "0.37" }
tor-cell = { version = "0.37" }
safelog = { version = "0.7.1" }
rusqlite = { version = "0.37", features = ["bundled"] }

# WebRTC (for isolated subcrate)
webrtc = { version = "0.11" }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }
bytes = { version = "1" }
