[workspace]
resolver = "2"
members = [
    "crates/wormhole-common",
    "crates/wormhole-rs",
    "crates/wormhole-rs-webrtc",
]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
# Core dependencies shared by all crates
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
futures = "0.3"
log = "0.4"

# Nostr signaling
nostr-sdk = "0.44.1"

# CLI
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

