[package]
name = "wormhole-common"
version.workspace = true
edition.workspace = true

[features]
default = []
iroh-addr = ["dep:iroh"]  # For MinimalAddr in wormhole.rs

[dependencies]
# Core
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
log = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
spake2 = { workspace = true }

# File handling
tempfile = { workspace = true }
tar = { workspace = true }
walkdir = { workspace = true }
fs4 = { workspace = true }
xxhash-rust = { workspace = true }
tokio-util = { workspace = true }

# Nostr signaling
nostr-sdk = { workspace = true }

# HTTP client for relay fetching
reqwest = { workspace = true }

# CLI (for PIN input)
rustyline = { workspace = true }
crc32fast = { workspace = true }

# iroh transport (optional - for MinimalAddr)
iroh = { workspace = true, optional = true }
