[package]
name = "wormhole-common"
version.workspace = true
edition.workspace = true

[features]
default = []
iroh-addr = ["dep:iroh"]  # For MinimalAddr in wormhole.rs

[dependencies]
# Core (workspace)
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
nostr-sdk = { workspace = true }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
spake2 = "0.4"

# File handling
tempfile = "3"
tar = "0.4"
walkdir = "2"
fs4 = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
tokio-util = "0.7"

# HTTP client for relay fetching
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# CLI (for PIN input)
rustyline = "15"
crc32fast = "1.4"

# iroh transport (optional - for MinimalAddr)
iroh = { version = "0.95.1", optional = true }
