[package]
name = "wormhole-rs-tor"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "wormhole-rs-tor"
path = "src/main.rs"

[dependencies]
# Common library
wormhole-common = { path = "../wormhole-common" }

# Core dependencies (workspace)
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
nostr-sdk = { workspace = true }
tempfile = { workspace = true }

# Crate-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tor/Onion transport
arti-client = { version = "0.37", features = ["onion-service-service", "onion-service-client", "tokio"] }
tor-hsservice = "0.37"
tor-cell = "0.37"
safelog = "0.7.1"
rusqlite = { version = "0.37", features = ["bundled"] }
