[package]
name = "wormhole-rs-webrtc"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "wormhole-rs-webrtc"
path = "src/main.rs"

[dependencies]
# Common library
wormhole-common = { path = "../wormhole-common" }

# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
log = { workspace = true }

# Nostr signaling
nostr-sdk = { workspace = true }

# ICE transport (crate-specific)
webrtc-ice = "0.14"
webrtc-util = "0.12"
pin-project-lite = "0.2"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"

# CLI
clap = { workspace = true }
env_logger = { workspace = true }
