[package]
name = "wormhole-rs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wormhole-rs"
path = "src/main.rs"

[features]
default = ["iroh", "onion"]
iroh = ["dep:iroh", "wormhole-common/iroh-addr"]
onion = ["dep:arti-client", "dep:tor-hsservice", "dep:tor-cell", "dep:safelog", "dep:rusqlite"]

[dependencies]
# Common library
wormhole-common = { path = "../wormhole-common" }

# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
nostr-sdk = { workspace = true }

# iroh transport (optional)
iroh = { workspace = true, optional = true }

# mDNS discovery (always enabled)
mdns-sd = { workspace = true }

# Tor/Onion transport (optional)
arti-client = { workspace = true, optional = true }
tor-hsservice = { workspace = true, optional = true }
tor-cell = { workspace = true, optional = true }
safelog = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tempfile = { workspace = true }
