[package]
name = "wormhole-rs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wormhole-rs"
path = "src/main.rs"

[dependencies]
# Common library
wormhole-common = { path = "../wormhole-common", features = ["nostr"] }

# Core dependencies (workspace)
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
nostr-sdk = { workspace = true }
tempfile = { workspace = true }

# iroh transport
iroh = { version = "0.96.1", features = ["address-lookup-mdns"] }

# Crate-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
